Fix missing space on bottom of announcement page

--- a/web/static/css/_comments.scss
+++ b/web/static/css/_comments.scss
@@ -65,6 +65,7 @@
 
 .comment-new, .comment-edit {
   border-top: $base-border;
+  margin-bottom: $base-spacing;
   padding-top: $base-spacing;
 
   input[type="submit"] {
